[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pedumper"
description = "Dumper can easily extract PE files in the memory of the target process"
readme = "docs/README.md"
license = {file = "LICENSE"}
version = "1.2.0"
authors = [ 
    { name = "Chihiro Hasegawa", email = "encry1024@gmail.com" },
]
dependencies = [
    "pefile"
]

[project.scripts]
pedumper = "pedumper.cli:main"

[project.optional-dependencies]
dev = [
    "pyproject-flake8",
    "flake8",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = [
    "F403",
    "F405"
]
max-line-length = 100