[tool.poetry]
name = "pedumper"
version = "1.3.0"
description = "Dumper can easily extract PE files in the memory of the target process"
authors = ["owlinux1000 <encry1024@gmail.com>"]
license = "MIT"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.11"
pefile = "^2022.5.30"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.2"

[tool.poetry.scripts]
pedumper = "pedumper.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

